# hacs-teletask-micros-rs232

./: .gitignore  BUILD.md  CHANGELOG.md  LICENSE  README.md  hacs.json  info.md  package.json  pyproject.toml  rollup.config.js
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: release.yml  validate.yml
custom_components/teletask/: __init__.py  binary_sensor.py  button.py  config_flow.py  dashboard.py  entity.py  light.py  manifest.json  number.py  sensor.py  services.yaml  switch.py  teletask_hub.py
custom_components/teletask/static/: README.md  teletask-test-card.js
custom_components/teletask/teletask/: __init__.py  device_config.py  events.py  helpers.py  micros_rs232.py  protocol.py
custom_components/teletask/translations/: en.json
docs/: INSTALLATION_GUIDE.md
examples/: config.json  devices.json
src/: device-control-tab.ts  event-monitor-tab.ts  styles.ts  teletask-test-card.ts  types.ts
